--- a/index.html
+++ b/index.html
@@ -62,11 +62,11 @@
 						<div class="feature">
 							<!-- <i class="fa fa-envelope-o"></i> -->
 							<h3>
-							<a href="https://www.google.com/search?">
+							<a href="https://stock-ai.com/">
 							<span style="color:#4285F4">G</span><span style="color:#EA4335">o</span><span style="color:#FBBC05">o</span><span style="color:#4285F4">g</span><span style="color:#34A853">l</span><span style="color:#EA4335">e</span>
 							</a>
 							<br>
-							<p>去 Google</p>
+							<p>好用的財經網站</p>
 							</h3>
 							
 						</div>
