--- a/index.html
+++ b/index.html
@@ -63,10 +63,10 @@
 							<!-- <i class="fa fa-envelope-o"></i> -->
 							<h3>
 							<a href="https://stock-ai.com/">
-							<span style="color:#4285F4">G</span><span style="color:#EA4335">o</span><span style="color:#FBBC05">o</span><span style="color:#4285F4">g</span><span style="color:#34A853">l</span><span style="color:#EA4335">e</span>
+							<span style="color:#4285F4">好</span><span style="color:#EA4335">用</span><span style="color:#FBBC05">的</span><span style="color:#4285F4">財</span><span style="color:#34A853">經</span><span style="color:#EA4335">網</span>
 							</a>
 							<br>
-							<p>好用的財經網站</p>
+							<p>看看吧~~</p>
 							</h3>
 							
 						</div>
